--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sync-wiki": "node scripts/sync-wiki.js"
   },
   "dependencies": {
+    "@astrojs/node": "^9.3.0",
     "@astrojs/starlight": "^0.35.1",
+    "@clerk/astro": "^2.10.10",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
   }
