--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/starlight": "^0.35.1",
     "@clerk/astro": "^2.10.10",
     "astro": "^5.6.1",
+    "node-fetch": "^3.3.2",
     "sharp": "^0.34.2"
   }
 }
