--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@astrojs/starlight": "^0.35.1",
     "@clerk/astro": "^2.10.10",
     "astro": "^5.6.1",
+    "glob": "^11.0.3",
     "node-fetch": "^3.3.2",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "simple-git": "^3.28.0",
+    "yaml": "^2.8.0"
   }
 }
